--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordGenerator"
-        mc:Ignorable="d"
-        Title="Password Generator" Height="310.564" Width="560.06" WindowStyle="ThreeDBorderWindow" Background="#FF3C3939" Foreground="White">
+        mc:Ignorable="d" FontSize="18"
+        Title="Password_Generator_v0.1" Height="310" Width="560" WindowStyle="ThreeDBorderWindow" Background="#FF3C3939" Foreground="White">
+        
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -26,5 +27,18 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="1" Grid.Row="1" 
+                   FontSize="28" 
+                   Text="Password Generator" Grid.ColumnSpan="3"
+                   Margin="0, 0, 0, 5"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="2"
+                   Text="First Name"/>
+        <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2"
+                 Width="150"/>
+
+        <Button x:Name="submitButton" Content="Run Me" 
+                Grid.Column="1" Grid.Row="3" Margin="10" Grid.ColumnSpan="2" Click="submitButton_Click"/>
     </Grid>
 </Window>
