--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -5,40 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordGenerator"
         mc:Ignorable="d" FontSize="18"
-        Title="Password_Generator_v0.1" Height="310" Width="560" WindowStyle="ThreeDBorderWindow" Background="#FF3C3939" Foreground="White">
-        
+        Title="Password_Generator_v1.0" Height="310" Width="450" WindowStyle="ThreeDBorderWindow" Background="#FF3C3939" Foreground="White">
+
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="20"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="20"/>
-        </Grid.ColumnDefinitions>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="10,10,0,0" TextWrapping="Wrap" Text="Password Generator" VerticalAlignment="Top" FontSize="30" FontWeight="Bold" Foreground="#FF0DFF23"/>
+        <Label x:Name="PasswordLabel" Content="Label" HorizontalAlignment="Center" Margin="84,64,74,0" VerticalAlignment="Top" Width="284" FontFamily="Leelawadee" FontSize="20" FontWeight="Bold" Foreground="#FFE20000" HorizontalContentAlignment="Center"/>
+        <Label x:Name="PasswordLengthLabel" Content="Password Length: 5" HorizontalAlignment="Center" Margin="119,112,109,0" VerticalAlignment="Top" Width="214" FontWeight="Bold" Foreground="#FF00DCFF" HorizontalContentAlignment="Center"/>
+        <Slider x:Name="slider" HorizontalAlignment="Center" Margin="119,163,109,0" VerticalAlignment="Top" Width="214" ValueChanged="slider_ValueChanged" IsSnapToTickEnabled="True"/>
+        <Button x:Name="button" Content="Copy" HorizontalAlignment="Center" Margin="147,203,137,0" VerticalAlignment="Top" Width="158" HorizontalContentAlignment="Center" Click="button_Click" FontWeight="Bold" Foreground="White" Background="#FF575757"/>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="20"/>
-        </Grid.RowDefinitions>
-
-        <TextBlock Grid.Column="1" Grid.Row="1" 
-                   FontSize="28" 
-                   Text="Password Generator" Grid.ColumnSpan="3"
-                   Margin="0, 0, 0, 5"/>
-
-        <TextBlock Grid.Column="1" Grid.Row="2"
-                   Text="First Name"/>
-        <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2"
-                 Width="150"/>
-
-        <Button x:Name="submitButton" Content="Run Me" 
-                Grid.Column="1" Grid.Row="3" Margin="10" Grid.ColumnSpan="2" Click="submitButton_Click"/>
     </Grid>
 </Window>
