--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         FontSize="18"
         Title="Password_Generator_v2.0"
-        Height="310"
-        Width="450"
+        Height="450"
+        Width="800"
         WindowStyle="ThreeDBorderWindow"
         Background="#FF3C3939"
         Foreground="White">
@@ -49,9 +49,10 @@
                 Content="Generate Password"
                 Width="200"
                 Height="50"
-                HorizontalAlignment="Center"/>
+                HorizontalAlignment="Center"
+                Click="PGenerator_Click" />
 
-        <Button x:Name="LManager"
+       <!-- <Button x:Name="LManager"
                 Grid.Column="1"
                 Grid.Row="3"
                 Grid.ColumnSpan="3"
@@ -59,9 +60,9 @@
                 Width="200"
                 Height="50"/>
 
-        <Frame x:Name="Main" NavigationUIVisibility="Hidden" Grid.ColumnSpan="4" Grid.RowSpan="5"/>
-        
-        
-        
+        <Frame x:Name="Main" NavigationUIVisibility="Hidden" Grid.ColumnSpan="4" Grid.RowSpan="5"
+               Navigated="Main_Navigated" />
+        -->
+        <Frame x:Name="Main" Grid.ColumnSpan="5" Grid.RowSpan="6"/>
     </Grid>
 </Window>
