--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="PasswordGenerator.PasswordGenerator"
+﻿<Page x:Class="PasswordGenerator.PasswordGen"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -35,7 +35,7 @@
                Grid.ColumnSpan="3"
                Content="Label"
                FontFamily="Leelawadee"
-               FontSize="70"
+               FontSize="40"
                FontWeight="Bold"
                Foreground="#FFE20000"
                HorizontalContentAlignment="Center"
@@ -52,26 +52,9 @@
                Foreground="#FF00DCFF"
                HorizontalContentAlignment="Center"
                VerticalAlignment="Bottom"
-               FontSize="30" />
+               FontSize="25" />
 
-        <Slider  x:Name="Slider"
-            Grid.Row="3"
-                 Grid.Column="1"
-                 Grid.ColumnSpan="3"
-                 Width="214"
-                 Height="50"
-                 ValueChanged="slider_ValueChanged"
-                 IsSnapToTickEnabled="True"
-                 VerticalAlignment="Top"
-                 FontSize="50"
-                 HorizontalAlignment="Center"/>
-        <Slider.LayoutTransform>
-            <ScaleTransform ScaleY="0.9"
-                            CenterX="15"
-                            CenterY="15" />
-        </Slider.LayoutTransform>
-
-        <!-- <Slider x:Name="slider"
+        <Slider x:Name="slider"
                 Grid.Row="3"
                 Grid.Column="2"
                 Width="214"
@@ -84,13 +67,16 @@
                 Margin="25,46,25,0" />
 
         <Button x:Name="button"
+                Grid.Row="4"
+                Grid.Column="2"                
                 Content="Copy"
-                Width="158"
+                Width="200"
+                Height="80"
                 HorizontalContentAlignment="Center"
                 Click="button_Click"
                 FontWeight="Bold"
                 Foreground="White"
-                Background="#FF575757" />
--->
+                Background="#FF575757"
+                FontSize="30" />
     </Grid>
 </Page>
