--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -52,7 +52,7 @@
                 HorizontalAlignment="Center"
                 Click="PGenerator_Click" />
 
-       <!-- <Button x:Name="LManager"
+       <Button x:Name="LManager"
                 Grid.Column="1"
                 Grid.Row="3"
                 Grid.ColumnSpan="3"
@@ -60,9 +60,7 @@
                 Width="200"
                 Height="50"/>
 
-        <Frame x:Name="Main" NavigationUIVisibility="Hidden" Grid.ColumnSpan="4" Grid.RowSpan="5"
-               Navigated="Main_Navigated" />
-        -->
+       
         <Frame x:Name="Main" Grid.ColumnSpan="5" Grid.RowSpan="6"/>
     </Grid>
 </Window>
