--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
-      Title="PasswordGenerator"
+      Title="PasswordGen"
       Background="#FF3C3939"
       Foreground="White">
 
@@ -64,7 +64,8 @@
                 VerticalAlignment="Top"
                 FontSize="20"
                 HorizontalAlignment="Center"
-                Margin="25,46,25,0" />
+                Margin="25,46,25,0" 
+                />
 
         <Button x:Name="button"
                 Grid.Row="4"
@@ -78,5 +79,17 @@
                 Foreground="White"
                 Background="#FF575757"
                 FontSize="30" />
+        
+        <Button x:Name="BtnBack"
+                Grid.Column="1"
+                Grid.Row="1"
+                Width="100"
+                Height="50"
+                Content="Back"
+                FontSize="30"
+                FontWeight="Bold"
+                Click="BtnBack_Click" />
+
+        <Frame x:Name="Password"/>
     </Grid>
 </Page>
