Working on things

--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -29,18 +29,19 @@
             <RowDefinition Height="5" />
         </Grid.RowDefinitions>
 
-        <Label x:Name="PasswordLabel"
+        <TextBlock x:Name="PasswordLabel"
                Grid.Column="1"
                Grid.Row="1"
                Grid.ColumnSpan="3"
-               Content="Label"
+               Text="Label"
                FontFamily="Leelawadee"
                FontSize="40"
                FontWeight="Bold"
-               Foreground="#FFE20000"
-               HorizontalContentAlignment="Center"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center" />
+                 Foreground="White"
+                 HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Background="#FF0089F5" />
+         
 
         <Label x:Name="PasswordLengthLabel"
                Grid.Row="2"
@@ -71,8 +72,8 @@
                 Grid.Row="4"
                 Grid.Column="2"                
                 Content="Copy"
-                Width="200"
-                Height="80"
+                Width="100"
+                Height="50"
                 HorizontalContentAlignment="Center"
                 Click="button_Click"
                 FontWeight="Bold"
@@ -82,13 +83,15 @@
         
         <Button x:Name="BtnBack"
                 Grid.Column="1"
-                Grid.Row="1"
-                Width="100"
-                Height="50"
+                Grid.Row="4"
+                Width="60"
+                Height="30"
+                Margin="10, 70, 190, 10"
                 Content="Back"
-                FontSize="30"
+                FontSize="20"
                 FontWeight="Bold"
                 Click="BtnBack_Click" />
+        
 
         <Frame x:Name="Password"/>
     </Grid>
