--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -11,7 +11,7 @@
       Background="#FF3C3939"
       Foreground="White">
 
-    <Grid>
+    <Grid Height="450">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="1*" />
@@ -44,7 +44,7 @@
          
 
         <Label x:Name="PasswordLengthLabel"
-               Grid.Row="2"
+               Grid.Row="3"
                Grid.Column="1"
                Grid.ColumnSpan="3"
                Content="Password Length: 5"
@@ -56,7 +56,7 @@
                FontSize="25" />
 
         <Slider x:Name="slider"
-                Grid.Row="3"
+                Grid.Row="4"
                 Grid.Column="2"
                 Width="214"
                 Height="18"
@@ -68,14 +68,14 @@
                 Margin="25,46,25,0" 
                 />
 
-        <Button x:Name="button"
-                Grid.Row="4"
-                Grid.Column="2"                
+        <Button x:Name="BtnCopy"
+                Grid.Row="2"
+                Grid.Column="3"                
                 Content="Copy"
                 Width="100"
                 Height="50"
                 HorizontalContentAlignment="Center"
-                Click="button_Click"
+                Click="BtnCopy_Click"
                 FontWeight="Bold"
                 Foreground="White"
                 Background="#FF575757"
@@ -86,12 +86,18 @@
                 Grid.Row="4"
                 Width="60"
                 Height="30"
-                Margin="10, 70, 190, 10"
+                Margin="10, 50, 190, 10"
                 Content="Back"
                 FontSize="20"
                 FontWeight="Bold"
                 Click="BtnBack_Click" />
-        
+
+        <CheckBox x:Name="NumbersCheck" 
+                  Grid.Row="2"
+                  Grid.Column="2" 
+                  Content="123"
+                  Foreground="#FFF9F9F9"
+                  FontSize="15"/>
 
         <Frame x:Name="Password"/>
     </Grid>
