Password gen options

--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PasswordGenerator"
       mc:Ignorable="d"
-      d:DesignHeight="450"
+      d:DesignHeight="400"
       d:DesignWidth="800"
       Title="PasswordGen"
       Background="#FF3C3939"
       Foreground="White">
 
-    <Grid Height="450">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="1*" />
@@ -30,18 +30,18 @@
         </Grid.RowDefinitions>
 
         <TextBlock x:Name="PasswordLabel"
-               Grid.Column="1"
-               Grid.Row="1"
-               Grid.ColumnSpan="3"
-               Text="Label"
-               FontFamily="Leelawadee"
-               FontSize="40"
-               FontWeight="Bold"
-                 Foreground="White"
-                 HorizontalAlignment="Center"
+                   Grid.Column="1"
+                   Grid.Row="1"
+                   Grid.ColumnSpan="3"
+                   Text="Label"
+                   FontFamily="Leelawadee"
+                   FontSize="40"
+                   FontWeight="Bold"
+                   Foreground="White"
+                   HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Background="#FF0089F5" />
-         
+
 
         <Label x:Name="PasswordLengthLabel"
                Grid.Row="3"
@@ -65,12 +65,11 @@
                 VerticalAlignment="Top"
                 FontSize="20"
                 HorizontalAlignment="Center"
-                Margin="25,46,25,0" 
-                />
+                Margin="25,46,25,0" />
 
         <Button x:Name="BtnCopy"
                 Grid.Row="2"
-                Grid.Column="3"                
+                Grid.Column="3"
                 Content="Copy"
                 Width="100"
                 Height="50"
@@ -80,7 +79,7 @@
                 Foreground="White"
                 Background="#FF575757"
                 FontSize="30" />
-        
+
         <Button x:Name="BtnBack"
                 Grid.Column="1"
                 Grid.Row="4"
@@ -92,13 +91,49 @@
                 FontWeight="Bold"
                 Click="BtnBack_Click" />
 
-        <CheckBox x:Name="NumbersCheck" 
+        <CheckBox x:Name="NumbersCheck"
                   Grid.Row="2"
-                  Grid.Column="2" 
-                  Content="123"
+                  Grid.Column="2"
+                  Content="Numbers (123)"
                   Foreground="#FFF9F9F9"
-                  FontSize="15"/>
+                  FontSize="15"
+                  Height="18"
+                  VerticalAlignment="Top"
+                  Margin="61,47,61,0"
+                  Width="142" />
 
-        <Frame x:Name="Password"/>
+        <CheckBox x:Name="CapitalCheck"
+                  Grid.Row="2"
+                  Grid.Column="2"
+                  Content="Capital (ABC)"
+                  Foreground="#FFF9F9F9"
+                  FontSize="15"
+                  Height="18"
+                  VerticalAlignment="Top"
+                  Margin="61,3,61,0"
+                  Width="142" />
+
+        <CheckBox x:Name="SmallCheck"
+                  Grid.Row="2"
+                  Grid.Column="2"
+                  Content="Small Letters (abc)"
+                  Foreground="#FFF9F9F9"
+                  FontSize="15"
+                  Height="18"
+                  Margin="61,24,50,56"
+                  Checked="SmallCheck_Checked" />
+
+        <CheckBox x:Name="SymbolsCheck"
+                  Grid.Row="2"
+                  Grid.Column="2"
+                  Content="Symbols (!£$%)"
+                  Foreground="#FFF9F9F9"
+                  FontSize="15"
+                  Height="18"
+                  VerticalAlignment="Bottom"
+                  Margin="61,0,61,10"
+                  Width="142" />
+
+        <Frame x:Name="Password" />
     </Grid>
 </Page>
