Working on a fix

--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -103,6 +103,7 @@
                   Width="142" />
 
         <CheckBox x:Name="CapitalCheck"
+                  IsChecked="True"
                   Grid.Row="2"
                   Grid.Column="2"
                   Content="Capital (ABC)"
@@ -120,8 +121,7 @@
                   Foreground="#FFF9F9F9"
                   FontSize="15"
                   Height="18"
-                  Margin="61,24,50,56"
-                  Checked="SmallCheck_Checked" />
+                  Margin="61,24,50,56"/>
 
         <CheckBox x:Name="SymbolsCheck"
                   Grid.Row="2"
