--- a/PasswordGenerator/PasswordGen.xaml
+++ b/PasswordGenerator/PasswordGen.xaml
@@ -133,6 +133,8 @@
                   Margin="61,0,61,10"
                   Width="142" />
 
-        <Frame x:Name="Password" />
+        <Frame x:Name="PasswordPage"
+               Grid.ColumnSpan="5"
+               Grid.RowSpan="6" />
     </Grid>
 </Page>
