--- a/PasswordGenerator/MainPage.xaml
+++ b/PasswordGenerator/MainPage.xaml
@@ -1,20 +1,17 @@
-﻿<Window x:Class="PasswordGenerator.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PasswordGenerator"
-        mc:Ignorable="d"
-        FontSize="18"
-        Title="Password_Generator_v2.0"
-        Height="450"
-        Width="800"
-        WindowStyle="ThreeDBorderWindow"
-        Background="#FF3C3939"
-        Foreground="White">
+﻿<Page x:Class="PasswordGenerator.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:PasswordGenerator"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="MainPage"
+      Background="#FF3C3939"
+      Foreground="White" >
 
     <Grid>
-        <!--<Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
@@ -30,7 +27,7 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="5" />
         </Grid.RowDefinitions>
-        
+
 
         <TextBlock x:Name="textBlock"
                    TextWrapping="Wrap"
@@ -53,15 +50,17 @@
                 HorizontalAlignment="Center"
                 Click="PGenerator_Click" />
 
-       <Button x:Name="LManager"
+        <Button x:Name="LManager"
                 Grid.Column="1"
                 Grid.Row="3"
                 Grid.ColumnSpan="3"
                 Content="Login Manager"
                 Width="200"
-                Height="50"/>
+                Height="50" />
 
-       -->
-        <Frame x:Name="Mainwin" />
+
+        <Frame x:Name="MainCon"
+               Grid.ColumnSpan="5"
+               Grid.RowSpan="6" />
     </Grid>
-</Window>
+</Page>
