--- a/PasswordGenerator/LManager.xaml
+++ b/PasswordGenerator/LManager.xaml
@@ -11,6 +11,98 @@
       Foreground="White">
 
     <Grid>
-        <ListBox />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="5" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="5" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Login Database"
+                   Grid.Row="1"
+                   Grid.Column="2"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="30"
+                   FontWeight="Bold" />
+        <TextBlock Text="Website:  "
+                   Grid.Column="1"
+                   Grid.Row="2"
+                   FontSize="20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontWeight="Bold" />
+        <TextBlock Text="Username / Email:  "
+                   Grid.Column="1"
+                   Grid.Row="3"
+                   FontSize="20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontWeight="Bold"/>
+        <TextBlock Text="Password:  "
+                   Grid.Column="1"
+                   Grid.Row="4"
+                   FontSize="20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontWeight="Bold"/>
+
+        <Button Content="Add" 
+                Grid.Column="2"
+                Grid.Row="5"
+                Width="100"
+                Height="40"
+                HorizontalAlignment="Left" />
+        
+        <Button Content="Delete"
+                Grid.Column="2"
+                Grid.Row="5"
+                Width="100"
+                Height="40"
+                HorizontalAlignment="Right" />
+
+        <Button Content="Back"
+                Grid.Column="3"
+                Grid.Row="5"
+                Width="100"
+                Height="40" />
+
+        <TextBox  Grid.Column="2"
+                  Grid.Row="2"
+                  Width="400"
+                  Height="35"
+                  Grid.ColumnSpan="2"
+                  HorizontalAlignment="Left" />
+
+        <TextBox  Grid.Column="2"
+                  Grid.Row="3"
+                  Width="400"
+                  Height="35"
+                  Grid.ColumnSpan="2"
+                  HorizontalAlignment="Left" />
+
+        <TextBox  Grid.Column="2"
+                  Grid.Row="4"
+                  Width="400"
+                  Height="35"
+                  Grid.ColumnSpan="2"
+                  HorizontalAlignment="Left" />
+
     </Grid>
 </Page>
