--- a/PasswordGenerator/LManager.xaml
+++ b/PasswordGenerator/LManager.xaml
@@ -1,11 +1,12 @@
 ﻿<Page x:Class="PasswordGenerator.LManager"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PasswordGenerator"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      mc:Ignorable="d"
+      d:DesignHeight="450"
+      d:DesignWidth="800"
       Title="LManager"
       Background="#FF3C3939"
       Foreground="White">
@@ -34,6 +35,7 @@
             <RowDefinition Height="5" />
         </Grid.RowDefinitions>
 
+
         <TextBlock Text="Login Database"
                    Grid.Row="1"
                    Grid.Column="2"
@@ -44,32 +46,32 @@
         <TextBlock Text="Website:  "
                    Grid.Column="1"
                    Grid.Row="2"
-                   FontSize="20"
+                   FontSize="15"
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"
                    FontWeight="Bold" />
         <TextBlock Text="Username / Email:  "
                    Grid.Column="1"
                    Grid.Row="3"
-                   FontSize="20"
+                   FontSize="15"
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"
-                   FontWeight="Bold"/>
+                   FontWeight="Bold" />
         <TextBlock Text="Password:  "
                    Grid.Column="1"
                    Grid.Row="4"
-                   FontSize="20"
+                   FontSize="15"
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"
-                   FontWeight="Bold"/>
+                   FontWeight="Bold" />
 
-        <Button Content="Add" 
+        <Button Content="Add"
                 Grid.Column="2"
                 Grid.Row="5"
                 Width="100"
                 Height="40"
                 HorizontalAlignment="Left" />
-        
+
         <Button Content="Delete"
                 Grid.Column="2"
                 Grid.Row="5"
@@ -77,32 +79,75 @@
                 Height="40"
                 HorizontalAlignment="Right" />
 
-        <Button Content="Back"
+        <Button x:Name="BackBtn"
+                Content="Back"
                 Grid.Column="3"
                 Grid.Row="5"
                 Width="100"
-                Height="40" />
+                Height="40"
+                Click="BackBtn_Click" />
 
-        <TextBox  Grid.Column="2"
-                  Grid.Row="2"
-                  Width="400"
-                  Height="35"
-                  Grid.ColumnSpan="2"
-                  HorizontalAlignment="Left" />
+        <TextBox x:Name="Website"
+                 Grid.Column="2"
+                 Grid.Row="2"
+                 Width="450"
+                 Height="25"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"
+                 FontSize="15" />
 
-        <TextBox  Grid.Column="2"
+        <TextBox  x:Name="User"
+                  Grid.Column="2"
                   Grid.Row="3"
-                  Width="400"
-                  Height="35"
+                  Width="450"
+                  Height="25"
                   Grid.ColumnSpan="2"
-                  HorizontalAlignment="Left" />
+                  HorizontalAlignment="Left"
+                  FontSize="15" />
 
-        <TextBox  Grid.Column="2"
-                  Grid.Row="4"
-                  Width="400"
-                  Height="35"
-                  Grid.ColumnSpan="2"
-                  HorizontalAlignment="Left" />
+        <TextBox x:Name="UserPassword"
+                 Grid.Column="2"
+                 Grid.Row="4"
+                 Width="450"
+                 Height="25"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"
+                 FontSize="15" />
 
+        <ListBox Grid.Row="6"
+                 Grid.Column="1"
+                 Grid.ColumnSpan="3"
+                 Grid.RowSpan="5" />
+
+        <DataGrid x:Name="dataGrid"
+                  Grid.Row="6"
+                  Grid.Column="1"
+                  Grid.RowSpan="5"
+                  Grid.ColumnSpan="3">
+
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background"
+                            Value="Turquoise" />
+                    <Setter Property="FontWeight"
+                            Value="SemiBold" />
+                    <Setter Property="BorderThickness"
+                            Value="1,1,1,1" />
+                    <Setter Property="BorderBrush"
+                            Value="Black" />
+                </Style>
+            </DataGrid.Resources>
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Website" Width="*"/>
+                <DataGridTextColumn Header="Username / Email" Width="*"/>
+                <DataGridTextColumn Header="Password" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+
+        <Frame x:Name="LManagerPage"
+               Grid.ColumnSpan="4"
+               Grid.RowSpan="11" />
     </Grid>
 </Page>
