--- a/PasswordGenerator/LManager.xaml
+++ b/PasswordGenerator/LManager.xaml
@@ -43,6 +43,7 @@
                    VerticalAlignment="Center"
                    FontSize="30"
                    FontWeight="Bold" />
+
         <TextBlock Text="Website:  "
                    Grid.Column="1"
                    Grid.Row="2"
@@ -50,6 +51,7 @@
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"
                    FontWeight="Bold" />
+
         <TextBlock Text="Username / Email:  "
                    Grid.Column="1"
                    Grid.Row="3"
@@ -57,6 +59,7 @@
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"
                    FontWeight="Bold" />
+
         <TextBlock Text="Password:  "
                    Grid.Column="1"
                    Grid.Row="4"
@@ -65,14 +68,17 @@
                    VerticalAlignment="Center"
                    FontWeight="Bold" />
 
-        <Button Content="Add"
+        <Button x:Name="AddBtn"
+                Content="Add"
                 Grid.Column="2"
                 Grid.Row="5"
                 Width="100"
                 Height="40"
-                HorizontalAlignment="Left" />
+                HorizontalAlignment="Left"
+                Click="AddBtn_Click" />
 
-        <Button Content="Delete"
+        <Button x:Name="DeleteBtn"
+                Content="Delete"
                 Grid.Column="2"
                 Grid.Row="5"
                 Width="100"
@@ -139,9 +145,25 @@
             </DataGrid.Resources>
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Website" Width="*"/>
-                <DataGridTextColumn Header="Username / Email" Width="*"/>
-                <DataGridTextColumn Header="Password" Width="*"/>
+                <DataGridTextColumn Header="Website"
+                                    Binding="{Binding webSite}"
+                                    Width="*" />
+                <DataGridTextColumn Header="Username / Email"
+                                    Binding="{Binding userName}"
+                                    Width="*" />
+                <DataGridTextColumn Header="Password"
+                                    Binding="{Binding userPassword}"
+                                    Width="*" />
+                <DataGridCheckBoxColumn Header="Check"
+                                        Width="50"
+                                        IsThreeState="True">
+                   <!-- <DataGridCheckBoxColumn.CellStyle>
+                        <Style>
+                            <EventSetter Event="CheckBox.Checked"
+                                         Handler="OnChecked" />
+                        </Style>
+                    </DataGridCheckBoxColumn.CellStyle> -->
+                </DataGridCheckBoxColumn>
             </DataGrid.Columns>
         </DataGrid>
 
