--- a/PasswordGenerator/LManager.xaml
+++ b/PasswordGenerator/LManager.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PasswordGenerator"
+      xmlns:sdk="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
@@ -77,14 +78,6 @@
                 HorizontalAlignment="Left"
                 Click="AddBtn_Click" />
 
-        <Button x:Name="DeleteBtn"
-                Content="Delete"
-                Grid.Column="2"
-                Grid.Row="5"
-                Width="100"
-                Height="40"
-                HorizontalAlignment="Right" />
-
         <Button x:Name="BackBtn"
                 Content="Back"
                 Grid.Column="3"
@@ -154,7 +147,14 @@
                 <DataGridTextColumn Header="Password"
                                     Binding="{Binding userPassword}"
                                     Width="*" />
-
+                <DataGridTemplateColumn Width="60" Header="Delete">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding DeleteCommand}"
+                                    Content="Delete"></Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <!-- <DataGridCheckBoxColumn.CellStyle>
                         <Style>
                             <EventSetter Event="CheckBox.Checked"
